indus/test/test_examples/type_errors/duplDecl.tpc
tele bit<32> x;
header bool x;
init {} 
telemetry {} 
check {}